<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_log">

    <fragment
        android:id="@+id/navigation_log"
        android:name="es.supok.pantano.ui.log.LogFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_log" />

    <fragment
        android:id="@+id/navigation_foods"
        android:name="es.supok.pantano.ui.foods.FoodsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_foods" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="es.supok.pantano.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>